<?xml version="1.0"?>
<package>
  <name>v4r</name>
  <version>1.4.1</version>
  <description>The Vision for Robotics Library of ACIN TUW (open source STRANDS version)</description>

  <maintainer email="faeulhammer@acin.tuwien.ac.at">Thomas Faeulhammer</maintainer>
  <maintainer email="alexandrov@acin.tuwien.ac.at">Sergey Alexandrov</maintainer>
  <maintainer email="zillich@acin.tuwien.ac.at">Michael Zillich</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://github.com/strands-project/v4r</url> 


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>suitesparse</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libopenni-dev</build_depend>
  <build_depend>libopenni2-dev</build_depend>
  <build_depend>libopenni-sensor-primesense-dev</build_depend>
  <build_depend>libceres-dev</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libdevil-dev</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>libqt4-opengl-dev</build_depend>
  <build_depend>libopenni2-dev</build_depend>
  <build_depend>libglm-dev</build_depend>
  <build_depend>assimp</build_depend>
  <build_depend>libsvm</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>
  <build_depend>libx11-dev</build_depend>
  <build_depend>libxinerama-dev</build_depend>
  <build_depend>libxi-dev</build_depend>
  <build_depend>libxrandr</build_depend>

  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>libopenni-dev</run_depend>
  <run_depend>libopenni2-dev</run_depend>
  <run_depend>libopenni-sensor-primesense-dev</run_depend>
  <run_depend>libceres-dev</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>libglew-dev</run_depend>
  <run_depend>glut</run_depend>
  <run_depend>libdevil-dev</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>libqt4-opengl-dev</run_depend>
  <run_depend>libglm-dev</run_depend>
  <run_depend>assimp</run_depend>
  <run_depend>libsvm</run_depend>
  <run_depend>libgoogle-glog-dev</run_depend>
  <run_depend>libx11-dev</run_depend>
  <run_depend>libxinerama-dev</run_depend>
  <run_depend>libxi-dev</run_depend>
  <run_depend>libxrandr</run_depend>
  
  <export>
	<build_type>cmake</build_type>
  </export>
</package>

