add_subdirectory(PCLAddOns)
add_subdirectory(SurfaceClustering)
add_subdirectory(SurfaceModeling)
add_subdirectory(SurfaceRelations)
add_subdirectory(SurfaceUtils)
add_subdirectory(svm)
add_subdirectory(GraphCut)
add_subdirectory(PCore)
add_subdirectory(EPUtils)
add_subdirectory(AttentionModule)
add_subdirectory(SurfaceSegmenter)
add_subdirectory(TomGine)
add_subdirectory(KeypointBase)
add_subdirectory(KeypointCameraTracker)
add_subdirectory(KeypointCameraTrackerPCL)
add_subdirectory(KeypointTools)
add_subdirectory(KeypointConversions)
